2003-11-15 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/gen.c (genPlus): generate shortcut for adding 0xab00
	* support/regression/tests/addsub.c: testing genPlus shortcut

2003-11-15  Borut Razem <borut.razem@siol.net>

	* src/SDCCmain.c: fixed bug #841645: -MM command line option passed to sdcpp

2003-11-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): fixed bug #527779
	* src/SDCCcse.c (deleteGetPointers): rewrote so that the set
	ordering is immaterial.
	* src/SDCCdflow.c (mergeInExprs): fixed bug #587536

2003-11-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>
	
	* src/SDCCicode.c (geniCodeAddressOf): fixed part of bug #840381
	* src/SDCCopt.c (replaceRegEqv, isLocalWithoutDef): fixed other part
	(SIGSEV) of bug #840381
	* src/SDCCmain.c (linkEdit, assemble): fixed bug #841606 (don't
	unlink new file before rename if new and old filenames are the same)

2003-11-13 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: started fixing bug #737001 (SDCC not clearing
	uninitialized variables) for the mcs51. Set environment variable 
	SDCC_GENRAMCLEAR to test. 
	xdata initialization slightly shorter

2003-11-12 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCsymt.c (addSymTypeChain, compareTypesExact): fixed bugs
	#838241 & 780691 (basicly the same bug)
	* src/SDCCBBlock.c (iCode2eBBlock): fixed bug #840148
	* src/SDCCBBlock.c (iCodeFromeBBlock): fixed bug #840162

2003-11-11 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): "fix" #834252

2003-11-11 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.c (removePostIncDecOps, removePreIncDecOps),
	* src/SDCCast.h,
	* src/SDCC.y: fixed bug #819403

2003-11-08 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/regression/fwk/lib/testfwk.c: printn is recursive and thus needs
	the reentrant attribute.
	* src/hc08/gen.c (genPackBits): added missing stack readjustment